# omlx

./: NOTICE  README.md  README.zh.md  pyproject.toml
Formula/: flyto-mlx.rb
omlx/: _version.py  cli.py  engine_pool.py  exceptions.py  model_discovery.py  model_settings.py  oq.py  process_memory_enforcer.py  request.py  scheduler.py  server.py  settings.py
omlx/adapter/: gemma4.py
omlx/admin/: benchmark.py  routes.py
omlx/admin/i18n/: en.json  es.json  fr.json  ja.json  ko.json  ru.json  zh-TW.json  zh.json
omlx/admin/static/js/: dashboard.js
omlx/admin/templates/: chat.html
omlx/admin/templates/dashboard/: _bench.html  _modal_model_settings.html  _settings.html
omlx/api/: audio_models.py  audio_routes.py  openai_models.py  utils.py
omlx/cache/: boundary_snapshot_store.py  prefix_cache.py  type_handlers.py
omlx/engine/: batched.py  dflash.py  diarize.py  pyannote_diarize.py  stt.py  vlm.py
omlx/metrics/: __init__.py  dflash_routing.py
omlx/models/: llm.py  reranker.py
omlx/patches/: gated_delta_advance.py  mlx_audio_per_layer_quant.py  specprefill.py
omlx/patches/deepseek_v4/: __init__.py  cache_handlers.py  tokenizer_patch.py
omlx/speculative/: __init__.py  dflash_factory.py  dflash_vlm_target_wrap.py
omlx/utils/: audio.py  tokenizer.py
packaging/: venvstacks.toml
packaging/omlx_app/: app.py  config.py  server_manager.py
tests/: test_active_models_visibility.py  test_audio_stt.py  test_cache_ntuple_state.py  test_deepseek_v4_patch.py  test_dflash_engine.py  test_engine_pool.py  test_memory_monitor.py  test_model_discovery.py  test_omlx_app.py  test_oq.py  test_process_memory_enforcer.py  test_scheduler.py  test_scheduler_chunked_prefill.py  test_utils_tokenizer.py
tests/integration/: test_boundary_cache_consistency.py  test_vlm_mrope_integration.py
