[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flyto-mlx"
dynamic = ["version"]
description = "Flyto MLX — Apple Silicon LLM server with audio chat, DFlash, and Chinese model presets (based on oMLX)"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "panwudi"},
    {name = "Flyto MLX contributors"},
    {name = "oMLX contributors (upstream)"}
]
keywords = ["llm", "mlx", "apple-silicon", "vllm", "inference", "transformers", "audio-llm", "gemma", "qwen", "deepseek"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "mlx>=0.31.2",
    # mlx-lm 0.31.3 == git commit ed1fca4 (verified hash identical 2026-05-16);
    # the upstream pyproject's "+3 unreleased fixes" comment was stale.
    "mlx-lm==0.31.3",
    # regex for mlx-lm's Gemma 4 tool parser (uses recursive patterns)
    "regex",
    # mlx-embeddings 0.1.0 == git commit 32981fa (verified hash identical 2026-05-16)
    "mlx-embeddings==0.1.0",
    # mlx-vlm custom processors bypass HF AutoProcessor, so torch is not required
    "transformers>=5.0.0",
    # transformers 5.x's tokenization_mistral_common module imports
    # ReasoningEffort from mistral_common (added in 1.10). The audio extras
    # transitively pull mistral-common via mlx-audio[stt], which historically
    # resolved to 1.9.x and broke WhisperProcessor.from_pretrained() with a
    # silent "Processor not found" on every Whisper model. Pinning the
    # minimum here ensures resolution lands on a compatible version even
    # without the audio extra installed.
    # See pmarreck/omlx#1 for full repro and root cause.
    "mistral-common>=1.10",
    "tokenizers>=0.19.0",
    "huggingface-hub>=0.23.0",
    "numpy>=1.24.0",
    "tqdm>=4.66.0",
    "pyyaml>=6.0",
    "itsdangerous>=2.0",
    "jinja2>=3.0",
    "sentencepiece",
    "tiktoken",
    "protobuf",
    "requests>=2.28.0",
    # SOCKS proxy support (used by httpx via huggingface-hub)
    "socksio>=1.0.0",
    "tabulate>=0.9.0",
    # Resource monitoring
    "psutil>=5.9.0",
    # Server
    "fastapi>=0.108.0",
    "uvicorn>=0.23.0",
    # python-multipart is needed by audio_routes.py (File/Form uploads), which
    # server.py unconditionally imports regardless of the [audio] extra.
    "python-multipart>=0.0.5",
    # JSON Schema validation for structured output
    "jsonschema>=4.0.0",
    # Harmony format parser for gpt-oss models
    "openai-harmony",
    # mlx-vlm 0.5.0 (downgrade from upstream's f96138e git pin, 30 commits behind).
    # Audio chat path verified intact in v0.5.0 (audio.py + audio_feature_extractor.py
    # + AudioEncoder + prepare_inputs(audio=) all present). The dropped 30 commits
    # are MTP / spec-dec optimisations and other-model support; not on audio path.
    "mlx-vlm>=0.5.0",
    "Pillow>=9.0.0",
    # dflash-mlx 0.1.6 — supersedes upstream's 20d68db pin (12 commits ahead, net additive).
    "dflash-mlx>=0.1.6",
]

[project.optional-dependencies]
grammar = [
    # Grammar-constrained decoding for structured output (requires torch ~2GB)
    "xgrammar>=0.1.32",
]
mcp = [
    "mcp>=1.0.0",
]
modelscope = [
    "modelscope>=1.10.0",
]
audio = [
    # mlx-audio 0.4.3 — supersedes upstream's 5175326 pin (90 commits ahead).
    # Extras: tts (misaki, num2words, spacy, phonemizer-fork, espeakng-loader,
    # sentencepiece), stt (tiktoken, mistral-common[audio]), sts (tts + stt + webrtcvad).
    "mlx-audio[tts,stt,sts]>=0.4.3",
]
paroquant = [
    # ParoQuant runtime loader for paroquant-quantized models. Installed
    # with --no-deps semantics here because the official [mlx] extra pulls
    # torchvision, which the load path doesn't actually use (verified end
    # to end on 0.1.14). The DMG build installs the same pin via build.py.
    "paroquant==0.1.14",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mcp>=1.0.0",
]
# PEP 735 dependency groups — consumed by `uv sync --dev`.
# Keep in sync with [project.optional-dependencies] dev above
# (pip/legacy toolchains use that section instead).
[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/panwudi/flyto-mlx"
Documentation = "https://github.com/panwudi/flyto-mlx#readme"
Repository = "https://github.com/panwudi/flyto-mlx"
"Gitee Mirror" = "https://gitee.com/panwudi/flyto-mlx"
Upstream = "https://github.com/jundot/omlx"

[project.scripts]
# Primary CLI under the Flyto MLX brand.
fmlx = "omlx.cli:main"
# Backward-compatible alias so existing scripts that call `omlx serve ...`
# keep working after upgrading from upstream oMLX or earlier Flyto MLX builds.
omlx = "omlx.cli:main"

[tool.setuptools.dynamic]
version = {attr = "omlx._version.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["omlx*"]

[tool.setuptools.package-data]
"omlx" = ["oq_calibration_data.json"]
"omlx.admin" = ["templates/**/*.html", "static/**/*", "i18n/*.json"]
"omlx.eval" = ["data/*.jsonl"]

[tool.uv]
# Override transitive pins (e.g. mlx-audio → mlx-lm==0.31.1) so the resolver
# accepts our minimum.
override-dependencies = [
    "mlx-lm==0.31.3",
]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]
ignore = ["E501", "B905"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
